// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline leaves atts alone 1`] = `
"class MyView extends View {}

MyView.prototype.__wq = {
  'name': function () {
    return this.props.name;
  },
  'style': function () {
    return this.props.style;
  }
};
MyView.prototype.__wc = [{
  wrapper: '__1',
  shield: 0,
  callbacks: {
    'name': this.dom.__1.text(this.getName(n, o))
  }
}, {
  wrapper: '__2',
  shield: 0,
  callbacks: {
    'style': this.dom.__2.att('class', \\"my-style \\" + n)
  }
}];
MyView.prototype.__ht = '<div><span></span><span id=\\"hey\\"></span></div>';

MyView.prototype.__bv = function (view, prototype) {
  view.__bd(prototype, false);

  view.dom = {
    __1: view.__gw([0]),
    __2: view.__gw([1])
  };
};"
`;

exports[`Inline with different endings 1`] = `
"class MyView extends View {}

MyView.prototype.__wq = {
  'name': function () {
    return this.props.name;
  }
};
MyView.prototype.__wc = [{
  wrapper: '__1',
  shield: 0,
  callbacks: {
    'name': this.dom.__1.text(this.getName)
  }
}, {
  wrapper: '__2',
  shield: 0,
  callbacks: {
    'name': this.dom.__2.text(this.getName(n, o))
  }
}, {
  wrapper: '__3',
  shield: 0,
  callbacks: {
    'name': this.dom.__3.text(this.getName())
  }
}];
MyView.prototype.__ht = '<div><span></span><span></span><span></span></div>';

MyView.prototype.__bv = function (view, prototype) {
  view.__bd(prototype, false);

  view.dom = {
    __1: view.__gw([0]),
    __2: view.__gw([1]),
    __3: view.__gw([2])
  };
};"
`;

exports[`Simple inline 1`] = `
"class MyView extends View {}

MyView.prototype.__wq = {
  'name': function () {
    return this.props.name;
  }
};
MyView.prototype.__wc = [{
  wrapper: '__1',
  shield: 0,
  callbacks: {
    'name': this.dom.__1.text(n)
  }
}];
MyView.prototype.__ht = '<div><span></span></div>';

MyView.prototype.__bv = function (view, prototype) {
  view.__bd(prototype, false);

  view.dom = {
    __1: view.__gw([0])
  };
};"
`;
